content/consul/v1.11.x/content/commands/config/delete.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Consul and the Consul logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/consul/blob/-/LICENSE

layout: commands
page_title: 'Commands: Config Delete'
---

# Consul Config Delete

Command: `consul config delete`

Corresponding HTTP API Endpoint: [\[DELETE\] /v1/config/:kind/:name](/api-docs/config#delete-configuration)

The `config delete` command deletes the configuration entry specified by the
kind and name. See the [configuration entries docs](/docs/agent/config-entries)
for more details about configuration entries.

The table below shows this command's [required ACLs](/api#authentication). Configuration of
[blocking queries](/api-docs/features/blocking) and [agent caching](/api-docs/features/caching)
are not supported from commands, but may be from the corresponding HTTP endpoint.

| ACL Required<sup>1</sup>                                      |
| ------------------------------------------------------------- |
| `service:write`<br />`operator:write`<br />`intentions:write` |

<sup>1</sup> The ACL required depends on the config entry kind being deleted:

| Config Entry Kind   | Required ACL       |
| ------------------- | ------------------ |
| ingress-gateway     | `operator:write`   |
| proxy-defaults      | `operator:write`   |
| service-defaults    | `service:write`    |
| service-intentions  | `intentions:write` |
| service-resolver    | `service:write`    |
| service-router      | `service:write`    |
| service-splitter    | `service:write`    |
| terminating-gateway | `operator:write `  |

## Usage

Usage: `consul config delete [options]`

#### API Options

@include 'http_api_options_client.mdx'

#### Enterprise Options

@include 'http_api_namespace_options.mdx'

@include 'http_api_partition_options.mdx'

#### Config Delete Options

- `-kind` - Specifies the kind of the config entry to read.

- `-name` - Specifies the name of the config entry to delete. The name of the
  `proxy-defaults` config entry must be `global`, and the name of the `mesh`
  config entry must be `mesh`.

- `-cas` - Perform a Check-And-Set operation. Specifying this value also
  requires the -modify-index flag to be set. The default value is false.

- `-modify-index=<int>` - Unsigned integer representing the ModifyIndex of the
  config entry. This is used in combination with the -cas flag.

## Examples

    $ consul config delete -kind service-defaults -name web

    $ consul config delete -kind service-defaults -name web -cas -modify-index 26
